<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1F618D">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/title"
        android:textColor="#FFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/tNombre"
        android:inputType="text"
        android:textColor="#FFF"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/ape"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/tApellido"
        android:inputType="text"
        android:textColor="#FFF"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/title2"
        android:textColor="#FFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/n1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/tN1"
        android:inputType="numberDecimal"
        android:textColor="#FFF"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/n2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/tN2"
        android:inputType="numberDecimal"
        android:textColor="#FFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/envioDatos"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="#0E83B8"
        android:onClick="enviarDatos_Activity"
        android:text="@string/sendData"
        android:textColor="#FFF"
        android:textSize="24sp" />

</LinearLayout>