<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1F618D">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:text="@string/titleA_2"
        android:textColor="#FFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:textColor="#FFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/ape"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:textColor="#FFF"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:text="@string/title_1A_2"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/n1"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/sigSuma"
            android:textColor="#FFF"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/n2"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="40dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/sigIgual"
            android:textColor="#FFF"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mRes"
            android:layout_width="330dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textColor="#FFF"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <Button
            android:id="@+id/volver"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#0E83B8"
            android:onClick="volver_Activity"
            android:text="@string/returnActivity"
            android:textColor="#FFF"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>